# neat-flappy-bird

./: Cargo.toml  README.md  index.html
deploy/: index.html  neat-flappy-bird-wasm.js  neat-flappy-bird.js  neat-flappy-bird.wasm
src/: ctx.rs  game.rs  main.rs  timer.rs
src/neat/: ga.rs  genes.rs  genotype.rs  innovation.rs  mod.rs  params.rs  phenotype.rs  species.rs  utils.rs
static/: index.html  neat-flappy-bird.js  neat-flappy-bird.wasm
