[package]
name = "neat-flappy-bird"
version = "1.0.3"
authors = ["planet0104 <planet0104@gmail.com>"]
edition = "2018"

[dependencies]
mengine = { git = "https://github.com/planet0104/mengine", tag="0.6.6" }
neat = { git = "https://github.com/planet0104/neat", tag="1.0.2" }

[profile.release]
lto = true
opt-level = 's'
panic = 'abort'